# Column-Code

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: requirements.docker.txt  requirements.txt
backend/app/: clients.py  colors.py  cycle.py  db.py  firmware.py  logs.py  main.py  mqtt.py  ota.py  presets.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  setup_idf.sh
firmware/main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  color.c  color.h  device_mac.h  device_mqtt.c  device_mqtt.h  heartbeat.c  heartbeat.h  http_client.c  http_client.h  main.c  ota.c  ota.h  remote_log.c  remote_log.h  version.h  wifi.c
tools/: sim_device.py
web_app/: package-lock.json  package.json  svelte.config.js
web_app/src/: app.css  app.html
web_app/src/lib/components/: ClientList.svelte  ColorPicker.svelte  LogViewer.svelte  PresetManager.svelte
web_app/src/routes/: +layout.svelte  +page.svelte
